# ChangeLog for dev-perl/Event
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Event/ChangeLog,v 1.80 2013/01/19 20:21:50 tove Exp $

*Event-1.210.0 (19 Jan 2013)

  19 Jan 2013; Torsten Veller <tove@gentoo.org> +Event-1.210.0.ebuild:
  Version bump

  09 Oct 2012; Anthony G. Basile <blueness@gentoo.org> Event-1.10.ebuild:
  stable ppc ppc64, bug #436854

  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> Event-1.10.ebuild:
  Stable for amd64, wrt bug #436854

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Event-1.190.0.ebuild:
  Cleanup

*Event-1.200.0 (05 Aug 2011)

  05 Aug 2011; Torsten Veller <tove@gentoo.org> +Event-1.200.0.ebuild:
  Version bump

  30 Jul 2011; Torsten Veller <tove@gentoo.org> -Event-1.13.ebuild,
  -Event-1.150.0.ebuild, -Event-1.170.0.ebuild, -Event-1.180.0.ebuild:
  Cleanup

*Event-1.190.0 (25 Jul 2011)

  25 Jul 2011; Torsten Veller <tove@gentoo.org> +Event-1.190.0.ebuild:
  Version bump

*Event-1.180.0 (06 Jul 2011)

  06 Jul 2011; Torsten Veller <tove@gentoo.org> +Event-1.180.0.ebuild:
  Version bump

*Event-1.170.0 (19 May 2011)

  19 May 2011; Torsten Veller <tove@gentoo.org> +Event-1.170.0.ebuild:
  Version bump

*Event-1.150.0 (03 May 2011)

  03 May 2011; Torsten Veller <tove@gentoo.org> +Event-1.150.0.ebuild:
  Version bump

  23 Dec 2009; Fabian Groffen <grobian@gentoo.org> Event-1.13.ebuild:
  Marked ~x86-solaris, bug #296509

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -Event-1.12.ebuild:
  Cleanup

*Event-1.13 (06 Oct 2009)

  06 Oct 2009; Torsten Veller <tove@gentoo.org> +Event-1.13.ebuild:
  Version bump

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -Event-1.11.ebuild:
  Cleanup

*Event-1.12 (26 Aug 2009)

  26 Aug 2009; Torsten Veller <tove@gentoo.org> +Event-1.12.ebuild:
  Version bump

  23 May 2009; Raúl Porcel <armin76@gentoo.org> Event-1.09.ebuild,