@@ -1,11 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm preinst prerm setup test unpack
-DEPEND=dev-lang/perl
-DESCRIPTION=fast, generic event loop
-HOMEPAGE=http://www.cpan.org/modules/by-module/Event/Event-1.09.readme
-KEYWORDS=alpha amd64 ~arm ia64 ppc ppc64 sparc x86
-LICENSE=|| ( Artistic GPL-2 )
-RDEPEND=dev-lang/perl
-SLOT=0
-SRC_URI=mirror://cpan/authors/id/J/JP/JPRIT/Event-1.09.tar.gz
-_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	unpacker	4495f6885ab72b2cc94467e9a89fa641
-_md5_=c5c49e63b8f70130bce1c626c8871b34
