@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=|| ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
-DESCRIPTION=fast, generic event loop
-EAPI=4
-HOMEPAGE=http://search.cpan.org/dist/Event/
-KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-solaris
-LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
-RDEPEND=|| ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
-SLOT=0
-SRC_URI=mirror://cpan/authors/id/J/JP/JPRIT/Event-1.20.tar.gz
-_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	unpacker	4495f6885ab72b2cc94467e9a89fa641
-_md5_=d77b7b43c3c6e971d4a754d1b8c7c119
