@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Event
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Event/ChangeLog,v 1.80 2013/01/19 20:21:50 tove Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Event/ChangeLog,v 1.81 2014/06/13 11:44:53 zlogene Exp $
+
+  13 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> -Event-1.09.ebuild,
+  -Event-1.10.ebuild, -Event-1.200.0.ebuild, Event-1.210.0.ebuild:
+  alpha/amd64/arm/ia64/ppc/ppc64/sparc/x86 stable wrt bug #513062
 
 *Event-1.210.0 (19 Jan 2013)
 
